[gd_scene load_steps=19 format=3 uid="uid://buwm2vco8ocs2"]

[ext_resource type="Script" path="res://assets/interactives/scripts/toilet.gd" id="1_jytb7"]
[ext_resource type="PackedScene" uid="uid://cvuw4gseph73f" path="res://assets/interactives/Sprites/toilet/Toilet.glb" id="2_h3h32"]
[ext_resource type="Texture2D" uid="uid://dduuyd37fqsdi" path="res://assets/interactives/Sprites/Toilet.png" id="3_52csf"]
[ext_resource type="Texture2D" uid="uid://bdxlv7wm44vd6" path="res://assets/interactives/Sprites/Door.png" id="4_ddcjm"]
[ext_resource type="AudioStream" uid="uid://bks8lu6toyps6" path="res://assets/interactives/sound effects/metal.mp3" id="5_qo802"]
[ext_resource type="AudioStream" uid="uid://ce5outfklo1ly" path="res://assets/interactives/sound effects/pikmin.mp3" id="6_jtve0"]
[ext_resource type="PackedScene" uid="uid://rkv88vvh4eeo" path="res://assets/enemies/scenes/majima_2.tscn" id="7_mnykg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mle0p"]
size = Vector3(12.1599, 9.9982, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_txx2r"]
size = Vector3(5.62617, 12.9268, 6.7901)

[sub_resource type="Animation" id="Animation_0jeh1"]
resource_name = "pikmin"
length = 1.66667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.0734712, 1, 1), Vector3(0.3, 1, 1), Vector3(0.0734712, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("door:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.738759, 0), Vector3(-5.25052, -0.738759, 0), Vector3(-4.01747, -0.738759, 0), Vector3(-5.25052, -0.738759, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/seat:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 5.77652, 0), Vector3(0, 4.78735, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node3D/seat:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(9.50323, 12.5423, 1), Vector3(10.5405, 10.5408, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node3D/seat:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer3D:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_qo802"), ExtResource("6_jtve0")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer3D:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.533333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_pikmin"
}]
}

[sub_resource type="Animation" id="Animation_b0mrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("door:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.738759, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/seat:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 5.0572, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node3D/seat:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(10.5405, 11.1197, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node3D/seat:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer3D:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer3D:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0ni6n"]
resource_name = "majima"
length = 1.66667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.0734712, 1, 1), Vector3(0.3, 1, 1), Vector3(0.0734712, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("door:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.738759, 0), Vector3(-5.25052, -0.738759, 0), Vector3(-4.01747, -0.738759, 0), Vector3(-5.25052, -0.738759, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/seat:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 4.78735, 0), Vector3(0, 5.0572, 0), Vector3(0, 5.77652, 0), Vector3(0, 4.78735, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node3D/seat:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(10.5405, 10.5408, 1), Vector3(10.5405, 11.1197, 1), Vector3(9.50323, 12.5423, 1), Vector3(10.5405, 10.5408, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node3D/seat:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer3D:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_qo802")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer3D:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_majima"
}]
}

[sub_resource type="Animation" id="Animation_vbhgp"]
resource_name = "empty"
length = 0.66667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.0734712, 1, 1), Vector3(0.3, 1, 1), Vector3(0.0734712, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("door:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.738759, 0), Vector3(-5.25052, -0.738759, 0), Vector3(-4.01747, -0.738759, 0), Vector3(-5.25052, -0.738759, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3D:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_qo802")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer3D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kdln"]
_data = {
"RESET": SubResource("Animation_b0mrf"),
"empty": SubResource("Animation_vbhgp"),
"majima": SubResource("Animation_0ni6n"),
"pikmin": SubResource("Animation_0jeh1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_nrood"]
atlas = ExtResource("3_52csf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hynr"]
atlas = ExtResource("3_52csf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv7w3"]
atlas = ExtResource("3_52csf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_yokos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrood")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hynr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv7w3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Toilet" type="Node3D"]
script = ExtResource("1_jytb7")

[node name="Toilet" parent="." instance=ExtResource("2_h3h32")]

[node name="door" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.738759, 0)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0990448, 7.99144, 5.50869)
shape = SubResource("BoxShape3D_mle0p")

[node name="door" type="Sprite3D" parent="door"]
transform = Transform3D(12.45, 0, 0, 0, 7.8408, 0, 0, 0, 1, 0, 8, 6)
texture = ExtResource("4_ddcjm")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.81371, 6.01464, 9.53751)
shape = SubResource("BoxShape3D_txx2r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0kdln")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.63874, 0)
volume_db = 26.988
max_distance = 197.4

[node name="Majima2" parent="." instance=ExtResource("7_mnykg")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 6.63874, 0)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(0.67017, 0, 0, 0, 0.650041, 0, 0, 0, 1, 0, 0, 0)

[node name="seat" type="AnimatedSprite3D" parent="Node3D"]
transform = Transform3D(10.5405, 0, 0, 0, 11.1197, 0, 0, 0, 1, 0, 5.0572, 0)
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_yokos")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
